All Downloads: Fix so style only applies to the in-page download button.

--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -80,7 +80,7 @@
             </div>
           </details>
 
-          <div class="download-button">
+          <div class="download-button download-button-page">
             <a
               id="download-btn"
               class="btn btn-download download-link"
