General: Add some hover feedback to white/no-bg buttons.

--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -86,7 +86,7 @@
           <div class="download-button download-button-page">
             <a
               id="download-btn"
-              class="btn btn-download download-link"
+              class="btn btn-download download-link btn-white-bg"
               href="{{ download_url(platform_os=win64) }}"
               data-donate-redirect="download-{{ channel or 'esr' }}"
               data-donate-content="post_download"
