Home: Hero text, and style adjustments

--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -24,9 +24,8 @@ with great features!') }}{% endblock %}
         <h1 class="tagline">{{_('<span class="txt-gradient">Free</span> Your Inbox')}}</h1>
         <p class="sub-tag">
           {% trans %}
-          Meet <em>Supernova</em>: our fastest, most beautiful <strong>email</strong>,
-          <strong>calendar</strong>, and <strong>contacts</strong> release yet. Designed
-          to maximize your freedoms.
+          Meet Thunderbird, the <strong>email</strong>,
+          <strong>calendar</strong>, and <strong>contacts</strong> app that maximizes your freedoms.
           {% endtrans %}
         </p>
       </div>
