Sprint24 Appeal: One last tweak.

--- a/sites/www.thunderbird.net/thunderbird/115.0/spring24/index.html
+++ b/sites/www.thunderbird.net/thunderbird/115.0/spring24/index.html
@@ -103,7 +103,7 @@
         <div class="line"></div>
         <div class="line"></div>
       </div>
-      <div>{{ svg('donate-heart') }}</div>
+      <div aria-hidden="true">{{ svg('donate-heart') }}</div>
       <div class="right-lines">
         <div class="line"></div>
         <div class="line"></div>
