Spring24 Appeal: Update utm campaign

--- a/sites/www.thunderbird.net/thunderbird/115.0/spring24/index.html
+++ b/sites/www.thunderbird.net/thunderbird/115.0/spring24/index.html
@@ -63,7 +63,7 @@
 
 {% block content %}
 <section id="appeal-body" class="letter-container font-xl">
-    <a href="{{ donate_url(content='cta', campaign='holiday_eoy_appeal_2023', source='thunderbird-client') }}" class="donate-banner" data-donate-btn>
+    <a href="{{ donate_url(content='cta', campaign='spring_appeal_2024', source='thunderbird-client') }}" class="donate-banner" data-donate-btn>
       <div id="donate-banner-left">
         {{ _('Click here to <strong class="block">Donate!</strong>') }}
       </div>
