--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -105,7 +105,7 @@ with great features!') }}{% endblock %}
       </div>
       <div class="section-text">
         <h2 class="section-heading">{{_('<span class="txt-gradient">Freedom</span> from Chaos')}}</h2>
-        <h3>{{_('Waste less time finding browser tabs.')}}</h3>
+        <h4>{{_('Waste less time finding browser tabs.')}}</h4>
         <p>
           {% trans %}
           Access all your messages, calendars, and contacts in one fast app. Filter and organize
@@ -146,7 +146,7 @@ with great features!') }}{% endblock %}
     <div class="container">
       <div class="section-text">
         <h2 class="section-heading">{{_('<span class="txt-gradient">Freedom</span> from Manipulation')}}</h2>
-        <h3>{{_('Our agenda isn’t hidden. It’s to make the world better.')}}</h3>
+        <h4>{{_('Our agenda isn’t hidden. It’s to make the world better.')}}</h4>
         <p>
           {% trans %}
           Thunderbird is funded by user donations. We don’t collect personal data, sell ads in your inbox, or secretly
@@ -186,7 +186,7 @@ with great features!') }}{% endblock %}
     <div class="container">
       <div class="section-text">
         <h2 class="section-heading">{{_('<span class="txt-gradient">Freedom</span> to Geek Out')}}</h2>
-            <h3>{{_('Thunderbird is yours.')}}</h3>
+            <h4>{{_('Thunderbird is yours.')}}</h4>
             <p>
               {% trans %}
               Thunderbird is clean and elegant by default, but easily customizable to match your workflow and visual
@@ -356,10 +356,10 @@ with great features!') }}{% endblock %}
   </section>
 
   <section id="free-your-inbox">
-    <div class="container no-gap">
+    <div class="container">
       <div class="section-text">
         <h2 class="cta-sub-heading">{{_('Are you ready to love email again?')}}</h2>
-        <h3 class="cta-heading">{{_('<span class="txt-gradient">Free</span> Your Inbox')}}</h3>
+        <h4 class="cta-heading">{{_('<span class="txt-gradient">Free</span> Your Inbox')}}</h4>
       </div>
       <div class="cta">
         <div class="os-list" aria-label="{{ _('Available on Windows, Linux, Mac, and Android') }}">
