--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -12,12 +12,12 @@
 
 {% block content %}
 <section>
-  <div class="container">
+  <div class="container" id="get-thunderbird">
     <div id="select-download" class="two-columns">
       <div class="column">
         <div class="section-text">
           <div class="section-title">
-            <h1>{{ _('Get <span class="txt-gradient">Thunderbird</span>') }}</h1>
+            <h2>{{ _('Get <span class="txt-gradient">Thunderbird</span>') }}</h2>
           </div>
           <p>{{ _('These are officially maintained and distributed by Thunderbird. Download the latest Release version unless you wish to test the Beta version and report bugs.') }}</p>
         </div>
@@ -106,7 +106,7 @@
       <div class="column">
         <div class="section-text">
           <div class="section-title">
-            <h1>{{ _('Release Information') }}</h1>
+            <h2>{{ _('Release Information') }}</h2>
           </div>
         </div>
         <div class="platform-release">
