--- a/sites/www.thunderbird.net/donate/index.html
+++ b/sites/www.thunderbird.net/donate/index.html
@@ -10,11 +10,11 @@
 {% block category %}{{ _('Contribute') }}{% endblock %}
 
 {% block content %}
-<section>
+<section id="become-a-supporter">
   <div class="container two-columns">
     <div class="section-text tight info-column">
-      <h1>{{ _('Become a <span class="txt-gradient">Supporter</span>') }}</h1>
-      <h3>{{ _('Help us make Thunderbird better.') }}</h3>
+      <h2>{{ _('Become a <span class="txt-gradient">Supporter</span>') }}</h2>
+      <h4>{{ _('Help us make Thunderbird better.') }}</h4>
       <p>{{ _('MZLA Corporation is the for-profit organization sustaining the free software mission of Thunderbird. Our work is to provide open source apps that are secure, private and free for users around the world. When you donate you help us:') }}</p>
       <ul class="styled-list">
         <li>{{ _('Develop new apps, integrations and features') }}</li>
@@ -39,11 +39,11 @@
   </div>
 </section>
 {% include 'includes/components/page-separator.html' %}
-<section>
+<section id="become-a-corporate-sponsor">
   <div class="container">
     <div class="section-text">
-      <h1>{{ _('Become a <span class="txt-gradient">Corporate Sponsor</span>') }}</h1>
-      <h3>{{ _('Secure an open future for yourself and the world.') }}</h3>
+      <h2>{{ _('Become a <span class="txt-gradient">Corporate Sponsor</span>') }}</h2>
+      <h4>{{ _('Secure an open future for yourself and the world.') }}</h4>
       <p>{{ _('Organizations deploying Thunderbird at scale or who share our passion for expanding digital freedoms can make a difference by becoming a one-time or recurring corporate sponsor. Small to medium size contributions can be made with the form above. For donations greater than $5000 USD please contact our business team. Thank you in advance for your generous support!') }}</p>
     </div>
     <div class="section-text">
@@ -55,10 +55,10 @@
   </div>
 </section>
 {% include 'includes/components/page-separator.html' %}
-<section>
+<section id="faq">
   <div class="container">
     <div class="section-text wide faq">
-      <h1>{{ _('Frequently Asked Questions') }}</h1>
+      <h2>{{ _('Frequently Asked Questions') }}</h2>
       {% include 'includes/faq.html' %}
     </div>
   </div>
