Participate: Add testimonials and some temp profile pics.

--- a/sites/www.thunderbird.net/participate/index.html
+++ b/sites/www.thunderbird.net/participate/index.html
@@ -97,23 +97,23 @@
   </div>
   <div class="container no-gap">
     <div class="testimonials">
-      {% call testimonial_card(high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp')), 'Ms Beatrice', 'Sr Meow-Stack Engineer, Canada') %}
-      Meow meow meow meow...
+      {% call testimonial_card(high_res_img('thunderbird/logos/release.png', optional_attributes={'alt': _('Berna') }, scale='2x', alt_formats=()), _('Berna'), _('Leadership, Switzerland')) %}
+      {{ _("Thunderbird is a testament to the power of the open-source community's contribution to driving innovation and efficiency.") }}
       {% endcall %}
-      {% call testimonial_card(high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp')), 'Ms Beatrice', 'Sr Meow-Stack Engineer, Canada') %}
-      Meow meow meow meow...
+      {% call testimonial_card(high_res_img('thunderbird/logos/beta.png', optional_attributes={'alt': _('Arthur') }, scale='2x', alt_formats=()), _('Arthur'), _('Bug Triager, USA')) %}
+      {{ _("If you don't have skin in the game, you can't complain about the direction the product is going in.") }}
       {% endcall %}
-      {% call testimonial_card(high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp')), 'Ms Beatrice', 'Sr Meow-Stack Engineer, Canada') %}
-      Meow meow meow meow...
+      {% call testimonial_card(high_res_img('thunderbird/logos/daily.png', optional_attributes={'alt': _('Hartmut') }, scale='2x', alt_formats=()), _('Hartmut'), _('Developer, Germany')) %}
+      {{ _("It is great to be able to improve the software by fixing little things that affect me and other users") }}
       {% endcall %}
-      {% call testimonial_card(high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp')), 'Ms Beatrice', 'Sr Meow-Stack Engineer, Canada') %}
-      Meow meow meow meow...
+      {% call testimonial_card(high_res_img('thunderbird/logos/release.png', optional_attributes={'alt': _('Doug') }, scale='2x', alt_formats=()), _('Doug'), _('Tester & Bug Triager, USA')) %}
+      {{ _("I volunteer to use the beta versions as soon as they are built, report issues I find, and test fixes.") }}
       {% endcall %}
-      {% call testimonial_card(high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp')), 'Ms Beatrice', 'Sr Meow-Stack Engineer, Canada') %}
-      Meow meow meow meow...
+      {% call testimonial_card(high_res_img('thunderbird/logos/beta.png', optional_attributes={'alt': _('Toad-Hall') }, scale='2x', alt_formats=()), _('Toad-Hall'), _('Support & Bug Triager, United Kingdom')) %}
+      {{ _("I volunteer to assist others in the Thunderbird Support Forum which I find a very rewarding experience.") }}
       {% endcall %}
-      {% call testimonial_card(high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp')), 'Ms Beatrice', 'Sr Meow-Stack Engineer, Canada') %}
-      Meow meow meow meow...
+      {% call testimonial_card(high_res_img('thunderbird/logos/daily.png', optional_attributes={'alt': _('Bogo') }, scale='2x', alt_formats=()), _('Bogo'), _('Translator, Bug Triager & Leadership, Bulgaria')) %}
+      {{ _("I began by contributing translations, thinking that people who speak my language deserve localized versions.") }}
       {% endcall %}
     </div>
   </div>
