Spring24 Appeal: Add clouds svg and gradient background.

--- a/sites/www.thunderbird.net/thunderbird/115.0/spring24/index.html
+++ b/sites/www.thunderbird.net/thunderbird/115.0/spring24/index.html
@@ -31,7 +31,14 @@
 </script>
 {% endblock %}
 
- {% block site_header %}
+{% block site_header_unwrapped %}
+<div class="clouds-bg">
+  <div class="left"></div>
+  <div class="right"></div>
+</div>
+{% endblock %}
+
+{% block site_header %}
 <header id="initAppeal" >
   <aside>
     <h1 id="appeal-heading" class="accent-text" aria-label="{{ _('Thunderbird is Powered by You!') }}">
