Spring24 Appeal: Design revision update

--- a/sites/www.thunderbird.net/thunderbird/115.0/spring24/index.html
+++ b/sites/www.thunderbird.net/thunderbird/115.0/spring24/index.html
@@ -56,7 +56,7 @@
   </aside>
   <aside id="illustration" aria-hidden="true">
     <div id="ill-body">
-      {{ svg('appeal/spring24/ill-body') }}
+      {{ svg('appeal/spring24/ill-body2') }}
     </div>
     <div id="ill-hearts">
       {{ svg('appeal/spring24/ill-hearts') }}
@@ -117,7 +117,7 @@
         <div class="line"></div>
       </div>
     </div>
-    <p class="text-center accent-text">
+    <p class="text-center closing-text">
       {{ _('The Thunderbird Team') }}
     </p>
 </section>
