Spring24 Appeal: Fix heart, lines, and body font position/size

--- a/sites/www.thunderbird.net/thunderbird/115.0/spring24/index.html
+++ b/sites/www.thunderbird.net/thunderbird/115.0/spring24/index.html
@@ -110,14 +110,14 @@
         <div class="line"></div>
         <div class="line"></div>
       </div>
-      <div aria-hidden="true">{{ svg('donate-heart') }}</div>
+      <div aria-hidden="true" class="heart-svg">{{ svg('donate-heart') }}</div>
       <div class="right-lines">
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
       </div>
     </div>
-    <p class="text-center closing-text">
+    <p class="closing-text">
       {{ _('The Thunderbird Team') }}
     </p>
 </section>
