Participate: Update copy

--- a/sites/www.thunderbird.net/participate/index.html
+++ b/sites/www.thunderbird.net/participate/index.html
@@ -10,11 +10,11 @@
 {% block category %}{{ _('Contribute') }}{% endblock %}
 
 {% block content %}
-<section id="we-need-you">
+<section id="we-need-your-talents">
   <div class="container no-gap">
     <div class="section-text">
-      <h2>{{ _('We Need <span class="txt-gradient">You</span>') }}</h2>
-      <h4>{{ _('Here are some of the ways you can help.') }}</h4>
+      <h2>{{ _('We Need Your <span class="txt-gradient">Talents</span>') }}</h2>
+      <h4>{{ _('Everyone can be a contributor. Here are some of the ways you can help.') }}</h4>
     </div>
     {% call accordion(svg('base/icons/participate/code'), _('Code')) %}
     <p>
