All Downloads: Adjust padding for the Release Information section.

--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -104,7 +104,7 @@
       </div>
 
       <div class="column">
-        <div class="section-text">
+        <div class="section-text release-information">
           <div class="section-title">
             <h2>{{ _('Release Information') }}</h2>
           </div>
